--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,16 +1,48 @@
-.dropbtn {
-    background-color: grey;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    z-index: 1;
-}
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  button, input[type="text"] {
+    padding: 5px;
+  }
+  
+  button:hover {
+    cursor: pointer;
+  }
+  
+  #bookmark-list-item {
+    width: 250px;
+  }
+  
+  .container {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
+  .bookmark-list {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .bookmark-list > li {
+    margin-bottom: 20px;
+    border: 1px solid grey;
+    padding: 20px;
+  }
+  
+  .bookmark-item {
+    display: block;
+    color: grey;
+    font-style: italic;
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  
+  .bookmark-item__checked {
+    text-decoration: line-through;
+  }
+  
