--- a/Styles/index.css
+++ b/Styles/index.css
@@ -9,40 +9,33 @@
   button, input[type="text"] {
     padding: 5px;
   }
+
   
-  button:hover {
-    cursor: pointer;
-  }
+  /* .bookmark-item {
+    width: 700px;
+  } */
   
-  #bookmark-list-item {
-    width: 250px;
-  }
-  
-  .container {
-    max-width: 600px;
+ /* .container {
+    max-width: 900px;
     margin: 0 auto;
-  }
+  }  */
   
   .bookmark-list {
     list-style: none;
     padding-left: 0;
   }
   
-  .bookmark-list > li {
+  /* .bookmark-list > li {
     margin-bottom: 20px;
     border: 1px solid grey;
     padding: 20px;
-  }
+  } */
   
   .bookmark-item {
     display: block;
-    color: grey;
     font-style: italic;
     font-size: 20px;
     margin-bottom: 15px;
   }
   
-  .bookmark-item__checked {
-    text-decoration: line-through;
-  }
   
