--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,41 +1,115 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+ 
+}
+body {
   
-  body {
-    font-family: 'Roboto', sans-serif;
-  }
-  
-  button, input[type="text"] {
-    padding: 5px;
-  }
+  color: #7B68EE;
+  font-family: 'Roboto', sans-serif;
+  margin: 0 auto;
+  max-width: 600px;
+  background-color: #191970;
+}
 
+h1 {
+  font-family: 'Londrina Shadow', cursive;
+  text-align: center;
+  font-size: 75px;
+  color: #aaaaaa;
+  margin: 60px 0 0 0;
+}
+
+body button, body select, body input, body textarea {
+
+  border: 1px solid #aaaaaa;
+  border-radius: 5px;
+  background-color: white;
+  color: grey;
+  margin: 10px;
+}
+
+.header-buttons {
+  font-size: 6;
+  border-radius: 5px;
+  margin: 10px;
+}
+.add-new-item {
+  background-color: white;
+  float: center; 
+  margin: auto;
+  width: 75%;
+  border: 2px solid #aaaaaa;
+  border-radius: 6px;
+}
+#form-rating {
+  font-size: 18px;
+}
+.submit-button {
+  font-size: 18px;
+}
+form input {
+  width: 80%;
+}
+
+.add-description {
+  width: 97.5%;
+  height: 300px;
+}
+
+.display-add-item {
+  margin: 80px;
+  padding: 10px;
+}
+
+#filter-by-rating-span {
+  margin: 50px;
+}
+
+.main-box {
+  padding: 30px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #666666;
   
-  /* .bookmark-item {
-    width: 700px;
-  } */
-  
- /* .container {
-    max-width: 900px;
-    margin: 0 auto;
-  }  */
-  
-  .bookmark-list {
-    list-style: none;
-    padding-left: 0;
-  }
-  
-  /* .bookmark-list > li {
-    margin-bottom: 20px;
-    border: 1px solid grey;
-    padding: 20px;
-  } */
-  
-  .bookmark-item {
-    display: block;
-    font-style: italic;
-    font-size: 20px;
-    margin-bottom: 15px;
-  }
-  
-  
+}
+li {
+  background-color: #F5F5F5;
+  list-style: none;
+  text-align: left;
+  border: 2.5px solid #aaaaaa;
+  border-radius: 10px;
+  padding: 10px;
+}
+.container {
+  text-align: center;
+  width: 60%;
+  margin: auto;
+  padding: 10px;
+}
+.hidden {
+  display: none;
+}
+.edit-details {
+  padding: 10px;
+  font-size: 15px;
+}
+.edit-item-description {
+  padding: 20px;
+}
+.item-description {
+  padding: 10px;
+}
+.show-details {
+  float: right;
+  font-size: 16px;
+  margin-right: 40px;
+}
+.desc-edit {
+  width: 80%;
+  height: 100px;
+  padding: 10px;
+}
+.edit-description-button, .submit-changes {
+  font-size: 15px;
+  margin: 10px;
+}
